feat: Implement read command
* The read command prints the raw body of the email with the given UID
  in the given mail box. If the email content is text, it will be easy
  to read through a terminal pager like less and more. If it's an HTML
  emaill, it can be piped to a browser like Lynx or even firefox.

Signed-off-by: Ahmed Abouzied <email@aabouzied.com>

--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -24,8 +24,10 @@ subcommands:
         args:
             - box:
                 help: The mail box to list emails of.
-    - fetch:
+    - read:
         about: Prints the full details of the email message.
         args:
+            - box:
+                help: The mail box to fetch email from.
             - id:
                 help: The unique ID of the email to fetch.
